// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Intersection Provider should correctly reshape and set initial state 1`] = `
Object {
  "east": Object {
    "lanes": Array [
      0,
      3,
    ],
    "left": false,
    "straight": false,
  },
  "north": Object {
    "lanes": Array [
      0,
      1,
    ],
    "left": true,
    "straight": false,
  },
  "south": Object {
    "lanes": Array [
      0,
      2,
    ],
    "left": true,
    "straight": false,
  },
  "west": Object {
    "lanes": Array [
      0,
      4,
    ],
    "left": false,
    "straight": false,
  },
}
`;

exports[`Intersection Provider should correctly step through patterns 1`] = `
Object {
  "east": Object {
    "lanes": Array [
      0,
      3,
    ],
    "left": false,
    "straight": false,
  },
  "north": Object {
    "lanes": Array [
      0,
      1,
    ],
    "left": false,
    "straight": true,
  },
  "south": Object {
    "lanes": Array [
      0,
      2,
    ],
    "left": false,
    "straight": true,
  },
  "west": Object {
    "lanes": Array [
      0,
      4,
    ],
    "left": false,
    "straight": false,
  },
}
`;

exports[`Intersection Provider should correctly step through patterns 2`] = `
Object {
  "east": Object {
    "lanes": Array [
      0,
      3,
    ],
    "left": true,
    "straight": false,
  },
  "north": Object {
    "lanes": Array [
      0,
      1,
    ],
    "left": false,
    "straight": false,
  },
  "south": Object {
    "lanes": Array [
      0,
      2,
    ],
    "left": false,
    "straight": false,
  },
  "west": Object {
    "lanes": Array [
      0,
      4,
    ],
    "left": true,
    "straight": false,
  },
}
`;

exports[`Intersection Provider should correctly step through patterns 3`] = `
Object {
  "east": Object {
    "lanes": Array [
      0,
      3,
    ],
    "left": false,
    "straight": true,
  },
  "north": Object {
    "lanes": Array [
      0,
      1,
    ],
    "left": false,
    "straight": false,
  },
  "south": Object {
    "lanes": Array [
      0,
      2,
    ],
    "left": false,
    "straight": false,
  },
  "west": Object {
    "lanes": Array [
      0,
      4,
    ],
    "left": false,
    "straight": true,
  },
}
`;

exports[`Intersection Provider should correctly step through patterns 4`] = `
Object {
  "east": Object {
    "lanes": Array [
      0,
      3,
    ],
    "left": false,
    "straight": false,
  },
  "north": Object {
    "lanes": Array [
      0,
      1,
    ],
    "left": true,
    "straight": false,
  },
  "south": Object {
    "lanes": Array [
      0,
      2,
    ],
    "left": true,
    "straight": false,
  },
  "west": Object {
    "lanes": Array [
      0,
      4,
    ],
    "left": false,
    "straight": false,
  },
}
`;
